portfolio/style.css
/* ... */
html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  background-color: var(--bg-color-main);
  font-family: var(--font-family);
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  font-style: normal;
  color: var(--text-color-main);
  overflow-x: hidden;
}

body.no-scroll {
  overflow-y: hidden;
}

ul {
  margin: 0;
  padding: 0;
}

li {
  list-style: none;
}

h1,
h2,
h3,
p {
  margin: 0;
}

a,
button {
  padding: 0;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  font-style: inherit;
  line-height: inherit;
  color: inherit;
  background-color: transparent;
  border: none;
  text-decoration: none;
  cursor: pointer;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
  object-fit: cover;
}

.wrapper {
  box-sizing: border-box;
  max-width: 1440px;
  padding-block: clamp(20px, 15.79vw, 60px);
  padding-inline: 20px;
  margin-inline: auto;
}

.block {
  width: 100%;
}

.block_add {
  background-color: var(--bg-color-add);
  color: var(--text-color-add);
}

.block_main {
  background-color: var(--bg-color-main);
  color: var(--text-color-main);
}

.title {
  margin-bottom: 12px;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 2rem;
  line-height: 1.25;
  text-transform: uppercase;
}

.title_add {
  color: var(--text-color-add);
}

.title_main {
  color: var(--text-color-main);
}

.header {
  position: relative;
  margin-inline: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 60px;
  max-width: 1440px;
}

.menu {
  position: absolute;
  z-index: 2;
  left: 100%;
  right: -100%;
  top: 100%;
  height: calc(100vh - 60px);
  display: flex;
  align-items: center;
  background-color: var(--bg-color-main);
  transition: all 0.4s ease-in-out;
}

.menu.open {
  left: 0;
  right: 0;
  transition: all 0.4s ease-in-out;
}

.menu__list {
  width: 100%;
}

.menu__link {
  display: block;
  line-height: 60px;
  width: 100%;
  text-align: center;
}

.menu__link {
  text-transform: uppercase;
  font-family: var(--second-family);
  transition: var(--transition-out);
}

@media (hover: hover) {
  .menu__link:hover {
    color: var(--color-accent);
    transition: var(--transition-in);
  }
}

@media (hover: none) {
  .menu__link:active {
    color: var(--color-accent);
  }
}

.logo {
  width: 60px;
  height: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: auto;
}

.burger-btn {
  position: relative;
  width: 60px;
  height: 60px;
}

.menu.open ~ .burger-btn::before {
  width: 20px;
  transform: rotate(45deg);
  top: 27px;
  transition: all 0.3s ease-in-out;
}

.menu.open ~ .burger-btn::after {
  top: 27px;
  transform: rotate(-45deg);
  transition: all 0.3s ease-in-out;
}

.burger-btn::before {
  content: "";
  position: absolute;
  top: 25px;
  right: 20px;
  height: 2px;
  width: 12px;
  background-color: var(--text-color-main);
  transition: all 0.3s ease-in-out;
}

.burger-btn::after {
  content: "";
  position: absolute;
  bottom: 25px;
  right: 20px;
  height: 2px;
  width: 20px;
  background-color: var(--text-color-main);
  transition: all 0.3s ease-in-out;
}

@media (min-width: 769px) {
  .menu {
    position: static;
    height: auto;
  }

  .menu__list {
    display: flex;
  }

  .menu__link {
    display: block;
    width: auto;
    padding-inline: 20px;
    line-height: 60px;
  }

  .burger-btn {
    display: none;
  }
}

/* =================== HERO BLOCK =================== */

.hero {
  box-sizing: border-box;
  max-width: 1440px;
  display: flex;
  flex-direction: column;
  margin-inline: auto;
  padding-block: clamp(20px, 15.79vw, 60px);
  padding-inline: 20px;
}

.hero__title {
  margin-bottom: clamp(10px, 10.5vw, 40px);
  font-family: var(--second-family);
  font-size: clamp(1rem, 14.74vw, 3.5rem);
  font-weight: 300;
  line-height: 1.15;
  text-transform: uppercase;
}

.hero__slogan {
  margin-bottom: 20px;
  font-family: var(--second-family);
  font-size: clamp(0.7rem, 5.26vw, 1.25rem);
  font-weight: 400;
  line-height: 1.4;
  text-transform: uppercase;
}

.hero-wrapper_intro {
  width: 57.89vw;
  display: flex;
  flex-direction: column;
  align-self: end;
  align-items: end;
  text-align: right;
}

.hero__intro {
  max-width: 220px;
  font-size: clamp(0.7rem, 4.21vw, 1rem);
}

.hero__img_2 {
  margin-bottom: clamp(20px, 15.79vw, 60px);
}

.stats {
  width: 100%;
  max-width: 342px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  row-gap: 10px;
  margin: 0;
  margin-bottom: clamp(20px, 10.53vw, 40px);
}

.stats__item {
  display: flex;
  flex-direction: column;
  padding-left: 27px;
}

.stats__value {
  position: relative;
  margin: 0;
  margin-bottom: 8px;
  font-family: var(--second-family);
  font-weight: 300;
  font-size: clamp(1rem, 12.6vw, 3rem);
  line-height: 1.12;
  text-transform: uppercase;
}

.stats__value::before {
  content: "+";
  position: absolute;
  left: -27px;
  top: 0;
  bottom: 0;
  width: 19px;
}

.stats__description {
  order: 1;
  font-size: clamp(0.7rem, 4.21vw, 1rem);
}

.award,
.hero__btn,
.hero-wrapper_add {
  display: none;
}
/* ... */

